# build-ops

./: .gitignore  BuildOps40_Complete_Specification.md  BuildOps40_PDF_Ingestion_Pipeline.md  BuildOps40_Phase_01_Scaffold.md  BuildOps40_Phase_02_Programs_Modules.md  BuildOps40_Phase_03_Day_Plans.md  BuildOps40_Phase_04_Attempts_Working_Screen.md  BuildOps40_Phase_05_Evidence_Bugs.md  BuildOps40_Phase_06_Scoring_Streaks_Badges.md  BuildOps40_Phase_07_Spaced_Repetition_Dependencies.md  BuildOps40_Phase_08_Analytics_Dashboard.md  BuildOps40_Phase_09_Search_Command_Palette.md  BuildOps40_Phase_10_Export_Import.md  BuildOps40_Phase_11_PDF_Ingestion.md  BuildOps40_Phase_12_Settings_Polish_QA.md  BuildOps40_Plain_English_Overview.md  FEATURES.md  INSTALLATION.md  PDF_INGESTION_IMPLEMENTATION.md  QUICK_START_PDF_INGESTION.md  README.md  TIME_ENGINE_IMPLEMENTATION.md  VERIFICATION_REPORT.md  package.json  playwright.config.ts  pnpm-lock.yaml  svelte.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 002_create_modules.sql  003_create_day_plans.sql  004_create_user_capacity_profiles.sql  005_create_day_attempts.sql  006_create_day_sessions.sql  007_create_time_recommendations.sql  008_create_focus_metrics_daily.sql  009_create_session_interruptions.sql  012_create_artifacts.sql  020_create_import_jobs.sql
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: analytics.rs  attempts.rs  capacity.rs  day_plans.rs  days.rs  import.rs  import.rs.backup  intelligence.rs  mod.rs  modules.rs  programs.rs  recommendations.rs  sessions.rs  time_planning.rs
src-tauri/src/db/: mod.rs
src-tauri/src/db/migrations/: 001_create_programs.sql  003_create_day_plans.sql  004_create_day_attempts.sql  005_create_checklists.sql  006_create_quizzes.sql  007_create_evidence.sql  008_create_bug_logs.sql  009_create_skill_scores.sql  010_create_weekly_reviews.sql  011_create_exercise_entries.sql  012_create_concept_tags.sql  013_create_spaced_repetition.sql  014_create_dependencies.sql  015_create_time_logs.sql  016_create_streaks.sql  017_create_badges.sql  (+2 more)
src-tauri/src/services/: ai_analyzer.rs  document_chunker.rs  import_applier.rs  mod.rs  pdf_extractor.rs  plan_generator.rs
(+120 files in other folders)
